fixes some mobile layout issues

--- a/src/components/Documents/Documents.module.css
+++ b/src/components/Documents/Documents.module.css
@@ -48,7 +48,6 @@
 
 @media only screen and (max-width: 414px) {
   .container {
-    height: 230px;
     margin-top: 0;
   }
 }
